# mddiff

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.ja.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/mddiff/: __init__.py  __main__.py  cli.py  differ.py  parser.py  renderer.py
tests/: test_cli.py  test_differ.py  test_parser.py
